<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">音乐盒</string>
    <string name="action_bar_lyric">词</string>
    <string name="nav_my_music">我的</string>
    <string name="nav_recommend">推荐</string>
    <string name="nav_net_music">乐库</string>
    <string name="nav_search">搜索</string>
    <string name="list_local">本地歌曲</string>
    <string name="list_download">我的下载</string>
    <string name="list_prefer">我喜欢听</string>
    <string name="list_default">默认列表</string>
    <string name="list_latest">最近播放</string>
    <string name="list_add">创建播放列表</string>
    <string name="music_count">{0}首歌曲</string>
    <string name="random_play">随机播放</string>
    <string name="batch_action">批量操作</string>
    <string name="type_all_music">全部歌曲</string>
    <string name="type_singer">歌手</string>
    <string name="type_folder">文件夹</string>
    <string name="mode_play_order">顺序播放</string>
    <string name="mode_play_random">随机播放</string>
    <string name="mode_play_loop">单曲循环</string>
    <string name="play_list">播放列表</string>
    <string name="toast_add_to_prefer">已添加到喜欢列表</string>
    <string name="toast_delete_from_prefer">已从喜欢列表删除</string>
    <string name="alert_list_add_title">创建列表</string>
    <string name="alert_list_rename_title">重命名列表</string>
    <string name="default_list_title">新建列表</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="toast_error_list_exist">列表已经存在</string>
    <string name="list_operate_rename">重命名</string>
    <string name="list_operate_delete">删除</string>
    <string name="alert_list_operate_title">列表操作</string>
    <string name="no_music_tip">没有歌曲，赶快去添加吧~</string>
    <string name="music_operate_add_to">添加到</string>
    <string name="music_operate_prefer">喜欢</string>
    <string name="music_operate_share">分享</string>
    <string name="music_operate_set_bell">设为铃声</string>
    <string name="music_operate_delete">删除</string>
    <string name="create_new_list">创建新列表</string>
    <string name="alert_add_to_list_title">添加到列表</string>
    <string name="toast_add_to_list_success">添加成功</string>
    <string name="toast_add_to_list_exist">该歌曲在列表已经存在</string>
    <string name="board_type_new_title">新歌榜</string>
    <string name="board_type_hot_title">热歌榜</string>
    <string name="board_type_billboard_title">Billboard</string>
    <string name="board_type_hito_chinese_title">Hito中文榜</string>
    <string name="board_no_music_tip">该榜单暂时没有音乐</string>
    <string name="all_download">全部下载</string>
    <string name="save_to_download_list">保存到下载列表</string>
    <string name="search_progress_tip">正在努力搜索中 ... </string>
    <string name="search">搜索</string>
    <string name="hint_search">请输入关键词</string>
    <string name="pull_up_refresh">上拉刷新</string>
    <string name="load_progress_tip">正在努力加载中 ... </string>
    <string name="always_end">已经是最后一项</string>
    <string name="please_download">请先下载</string>
    <string name="load_lrc">正在加载歌词 ...</string>
    <string name="try_listen">试听</string>
    <string name="download">下载</string>
    <string name="alert_download_list_title">下载列表</string>
    <string name="download_success">下载成功</string>
    <string name="menu_scan_music">扫描歌曲</string>
    <string name="menu_change_skin">换肤</string>
    <string name="menu_sleep_mode">睡眠模式</string>
    <string name="menu_change_language">语言切换</string>
    <string name="menu_background_blur">背景模糊化</string>
    <string name="menu_exit">退出</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">英文</string>
    <string name="scan_start_msg">正在扫描，请等待 ... </string>
    <string name="scan_increament">扫描结束，新增了{0}首歌曲</string>
    <string name="scan_decreament">扫描结束，减少了{0}首歌曲</string>
    <string name="no_network">请先检查网络连接是否可用</string>
    <string name="minutes">分钟</string>
    <string name="sleep_time_set">设置睡眠时间</string>
    <string name="close_sleep_mode">关闭睡眠模式</string>
    <string name="input_invalid">输入无效</string>
    <string name="send_to">发送到</string>
    <string name="choose_ringtone_type">选择铃声类型</string>
    <string name="type_ringtone">来电铃声</string>
    <string name="type_alarm">闹钟铃声</string>
    <string name="type_notification">通知铃声</string>
    <string name="type_all">所有铃声</string>
    <string name="friend_tip">温馨提示</string>
    <string name="comfirm_delete">您真的要删除吗？</string>
    <string name="comfirm_remove">您真的要移出列表吗？（不删除本地文件）</string>
    <string name="list_select_tip">全部歌曲{0}首，选中{1}首</string>
    <string name="no_music_selected">没有歌曲选中</string>
    <string name="toast_add_mutil_to_list_success">{0}添加了{1}首歌曲</string>
    <string name="adding">正在添加：{0}/{1}</string>
    <string name="deleting">正在删除：{0}/{1}</string>
    <string name="toast_delete_mutil_from_list_success">{0}删除了{1}首歌曲</string>
</resources>
