<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/ly_main_bg"
    android:background="@drawable/app_blur_bg0">


	<RelativeLayout
		android:id="@+id/ly_list_top_bar"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:background="@color/bg_transparent" >

		<ImageView
			android:id="@+id/iv_action_bar_back"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:layout_marginLeft="13dp"
			android:layout_centerVertical="true"
			android:src="@drawable/icon_back"/>

		<TextView
			android:id="@+id/tv_top_list_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/list_local"
			android:textColor="@color/default_text_color"
			android:textSize="18sp"/>

		<CheckBox
			android:id="@+id/cb_all_select"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="15dp"/>
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/ly_bottom_bar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true">

		<TextView
			android:id="@+id/tv_add_to"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_transparent_no_radius"
			android:gravity="center"
			android:text="@string/music_operate_add_to"
			android:textSize="18sp"
			android:textColor="@color/default_text_color"/>

		<TextView
			android:id="@+id/tv_delete"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_transparent_no_radius"
			android:gravity="center"
			android:text="@string/music_operate_delete"
			android:textSize="18sp"
			android:textColor="@color/default_text_color"/>
	</LinearLayout>

	<TextView
		android:id="@+id/tv_select_tip"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_above="@id/ly_bottom_bar"
		android:background="@color/bg_list_select_tip"
		android:gravity="center"
		android:text="@string/list_select_tip"
		android:textSize="16sp"
		android:textColor="@color/default_text_color"></TextView>

	<ListView
		android:id="@+id/lv_music_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/ly_list_top_bar"
		android:layout_above="@id/ly_bottom_bar"
		android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"
		android:scrollbars="none"
		android:footerDividersEnabled="false"
		android:divider="@drawable/divider_horizontal">
	</ListView>
</RelativeLayout>
