<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider_horizontal"/>

    <LinearLayout
        android:id="@+id/ly_refresh"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/icon_refresh"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pull_up_refresh"
            android:textSize="18sp"
            android:textColor="@color/default_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_progress_tip"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/icon_refresh"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_progress_tip"
            android:textSize="18sp"
            android:textColor="@color/default_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_end"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always_end"
            android:textSize="18sp"
            android:textColor="@color/default_text_color"/>
    </LinearLayout>
</LinearLayout>