<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/ly_music_operate_bar">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/divider_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_add_to"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_stop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="10dp"
                android:text="@string/music_operate_add_to"
                android:textColor="@color/default_text_color"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_prefer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_stop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="5dp"
                android:text="@string/music_operate_prefer"
                android:textColor="@color/default_text_color"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_stop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="5dp"
                android:text="@string/music_operate_share"
                android:textColor="@color/default_text_color"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_set_bell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_stop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="5dp"
                android:text="@string/music_operate_set_bell"
                android:textColor="@color/default_text_color"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_stop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="5dp"
                android:text="@string/music_operate_delete"
                android:textColor="@color/default_text_color"
                android:textSize="14dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
