<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_item_btn_normal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:src="@drawable/icon_search"/>

            <EditText
                android:id="@+id/et_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_search"
                android:singleLine="true"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/default_text_color"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:src="@drawable/icon_close"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/bg_item_btn_normal"
            android:gravity="center"
            android:text="@string/search"
            android:textSize="16sp"
            android:textColor="@color/default_text_color"/>
    </LinearLayout>

	<LinearLayout 
        android:id="@+id/ly_load_progress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/search_progress_tip"
            android:textColor="@color/default_text_color"
            android:textSize="18sp"/>
     </LinearLayout>

    <com.lzb.musicbox.view.PullUpListView
        android:id="@+id/lv_music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:divider="@drawable/divider_horizontal"></com.lzb.musicbox.view.PullUpListView>
</LinearLayout>
